# chip8

./: .gitignore  SUMMARY.txt  generate.py  pyproject.toml  repomix-output.xml  requirements.txt  train.py
data/: dataset.py  generator.py  tokenizer.py
emulator/: cpu.py  display.py  keypad.py  memory.py  tracer.py
hull/: kv_cache.py
model/: attention.py  config.py  hardmax.py  transformer.py
